now showing an img

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<link  rel="stylesheet"href="style.css" type="text/css"/>
 		<script id="view-tpl" type="text/template">
 			<div class="image">
-				<img src="img/easy/7seas.png"/>
+				<img src="{{imgSrc}}"/>
 			</div>
 			<div class="answer">
 				<input type="text" placeholder="Your Answer"/>
