--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
-<html>
+ <!DOCTYPE HTML>
+ <html>
 	<head>
-		<link  rel="stylesheet"href="style.css" type="text/css"/>
+		<link href="bootstrap/css/bootstrap.css" rel="stylesheet" media="screen"/>
+		<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" media="screen"/>
+		<link href="style.css" rel="stylesheet" media="screen"/>
+		
+		
 		<script id="view-tpl" type="text/template">
+			
 			<div class="image">
 				<img src="{{imgSrc}}"/>
-			</div>
-			<div class="answer">
-				<input type="text" placeholder="Your Answer"/>
-				<input type="button" value="Check"/>
 			</div>
 		</script>
 	</head>
 	<body>
-		
-		<div id="primary-content" class="wrap">
-		
+		<div class="navbar navbar-inverse">
+			<div class="navbar-inner">
+			</div>
 		</div>
+		<div class="container pagination-centered">
+						<div id="primary-content">
+							
+						</div>
+			<form class="well form-inline">
+						<input id="guese" class="span3" type="text" placeholder="Your Answer" />
+						<a id="check-answer" class="btn btn-primary " href="#">Check</a>
+						
+			</form>
+		</div>
+		<script language="javascript" type="text/javascript" src="js/lib/jquery-1.8.0.min.js"></script> 
+		<script language="javascript" type="text/javascript" src="js/lib/mustache.js"></script> 
+		<script language="javascript" type="text/javascript" src="js/lib/underscore.min.js"></script> 
+		<script language="javascript" type="text/javascript" src="js/lib/backbone-min.js"></script> 
+		<script language="javascript" type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script> 
+
+		<script language="javascript" type="text/javascript" src="js/rebus-router.js"></script> 
+		<script language="javascript" type="text/javascript" src="js/models/rebus-model.js"></script> 
+		<script language="javascript" type="text/javascript" src="js/views/rebus-view.js"></script> 
+
 		
-	<script language="javascript" type="text/javascript" src="js/lib/jquery-1.8.0.min.js"></script> 
-	<script language="javascript" type="text/javascript" src="js/lib/mustache.js"></script> 
-	<script language="javascript" type="text/javascript" src="js/lib/underscore.min.js"></script> 
-	<script language="javascript" type="text/javascript" src="js/lib/backbone-min.js"></script> 
-	<script language="javascript" type="text/javascript" src="js/lib/bootstrap.min.js"></script> 
-
-	<script language="javascript" type="text/javascript" src="js/rebus-router.js"></script> 
-	<script language="javascript" type="text/javascript" src="js/models/rebus-model.js"></script> 
-	<script language="javascript" type="text/javascript" src="js/views/rebus-view.js"></script> 
-
-	
-	<script language="javascript" type="text/javascript" >
-		/*go backbone go*/
-		var router = new APP.Routers.RebusRouter();
-	</script>
+		<script language="javascript" type="text/javascript" >
+			/*go backbone go*/
+			var router = new APP.Routers.RebusRouter();
+		</script>
 	</body>
 </html>
