using backbone-relational ( I don't think I need to though? I'm not using oneToMany) to make relations between the three models

--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@
 		<script type="text/javascript" src="js/lib/mustache.js"></script> 
 		<script type="text/javascript" src="js/lib/underscore.min.js"></script> 
 		<script type="text/javascript" src="js/lib/backbone-min.js"></script> 
+		<script type="text/javascript" src="js/lib/backbone-relational.js"></script> 
 		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script> 
 		<!-- router then models then views-->
 		<script type="text/javascript" src="js/rebus-router.js"></script> 
+		
+		<script type="text/javascript" src="js/models/guese-model.js"></script>  <!-- other models depend on this -->
 		<script type="text/javascript" src="js/models/rebus-model.js"></script> 
 		<script type="text/javascript" src="js/models/game-model.js"></script> 
+		
 		<script type="text/javascript" src="js/views/rebus-view.js"></script> 
 		<script type="text/javascript" src="js/views/guese-view.js"></script> 
 		<script type="text/javascript" src="js/views/score-view.js"></script> 
